# Marine-Litter-Detection

./: README.md
Colab_train/: Marine_Litter_Detection_Project.ipynb
Pre-processing/: main.ipynb  pyproject.toml
